--- a/templates/generoview.html
+++ b/templates/generoview.html
@@ -328,6 +328,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -343,9 +344,7 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
     $("#generosdiv").load(window.location + " #generosdiv");
    
@@ -363,9 +362,7 @@
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													
