--- a/templates/index.html
+++ b/templates/index.html
@@ -186,6 +186,7 @@ background: linear-gradient(to right, rgba(248,54,0, 0.7), rgba(254,140,0,0.7));
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -225,6 +226,7 @@ background: linear-gradient(to right, rgba(248,54,0, 0.7), rgba(254,140,0,0.7));
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -279,6 +281,7 @@ background: linear-gradient(to right, rgba(248,54,0, 0.7), rgba(254,140,0,0.7));
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -316,6 +319,7 @@ background: linear-gradient(to right, rgba(248,54,0, 0.7), rgba(254,140,0,0.7));
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -393,6 +397,7 @@ background: linear-gradient(to right, rgba(248,54,0, 0.7), rgba(254,140,0,0.7));
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -430,6 +435,7 @@ background: linear-gradient(to right, rgba(248,54,0, 0.7), rgba(254,140,0,0.7));
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -495,6 +501,7 @@ background: linear-gradient(to right, rgba(248,54,0, 0.7), rgba(254,140,0,0.7));
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -532,6 +539,7 @@ background: linear-gradient(to right, rgba(248,54,0, 0.7), rgba(254,140,0,0.7));
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -799,6 +807,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -850,6 +859,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -936,6 +946,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -987,6 +998,7 @@ $('#tabcontentin').append('<div id="zzz'+value.id+'"  class="slide-it" style="wi
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
