--- a/templates/ajaxserielistre.html
+++ b/templates/ajaxserielistre.html
@@ -25,6 +25,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -32,16 +33,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													
@@ -64,6 +61,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -71,16 +69,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													 document.getElementById(juana).style.display = "none";
@@ -118,6 +112,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -125,16 +120,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													 document.getElementById(juan).style.display = "none";
@@ -155,6 +146,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -162,16 +154,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 														
 													    document.getElementById(juana).style.display = "none";
@@ -233,6 +221,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -240,16 +229,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													
@@ -270,6 +255,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -277,16 +263,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 														
 													    document.getElementById(juana).style.display = "none";
@@ -337,6 +319,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -344,16 +327,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													
@@ -374,6 +353,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -381,16 +361,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 														
 													    document.getElementById(juana).style.display = "none";
