--- a/templates/ajaxuser.html
+++ b/templates/ajaxuser.html
@@ -25,6 +25,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -32,16 +33,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													
@@ -64,6 +61,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -71,16 +69,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													 document.getElementById(juana).style.display = "none";
@@ -118,6 +112,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -125,16 +120,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													 document.getElementById(juan).style.display = "none";
@@ -155,6 +146,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -162,16 +154,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 														
 													    document.getElementById(juana).style.display = "none";
@@ -232,6 +220,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -239,16 +228,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													
@@ -269,6 +254,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -276,16 +262,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 														
 													    document.getElementById(juana).style.display = "none";
@@ -334,6 +316,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -341,16 +324,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													
@@ -371,6 +350,7 @@
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -378,16 +358,12 @@
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													    
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 														
 													    document.getElementById(juana).style.display = "none";
