--- a/templates/moviegridfw.html
+++ b/templates/moviegridfw.html
@@ -87,6 +87,7 @@ El mago de Oz (1939)</h1>
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -94,16 +95,12 @@ El mago de Oz (1939)</h1>
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													   
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													
@@ -126,6 +123,7 @@ El mago de Oz (1939)</h1>
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -133,16 +131,12 @@ El mago de Oz (1939)</h1>
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													   
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													 document.getElementById(juana).style.display = "none";
@@ -180,6 +174,7 @@ El mago de Oz (1939)</h1>
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -187,16 +182,12 @@ El mago de Oz (1939)</h1>
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													   
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													 document.getElementById(juan).style.display = "none";
@@ -217,6 +208,7 @@ El mago de Oz (1939)</h1>
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -224,16 +216,12 @@ El mago de Oz (1939)</h1>
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													   
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 														
 													    document.getElementById(juana).style.display = "none";
@@ -294,6 +282,7 @@ El mago de Oz (1939)</h1>
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -301,16 +290,12 @@ El mago de Oz (1939)</h1>
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													   
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													
@@ -331,6 +316,7 @@ El mago de Oz (1939)</h1>
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -338,16 +324,12 @@ El mago de Oz (1939)</h1>
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													   
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 														
 													    document.getElementById(juana).style.display = "none";
@@ -396,6 +378,7 @@ El mago de Oz (1939)</h1>
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -403,16 +386,12 @@ El mago de Oz (1939)</h1>
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													   
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 													
 													
@@ -433,6 +412,7 @@ El mago de Oz (1939)</h1>
 													    $.ajax({
 													        method: "POST",
 													        url: $thisURL,
+													        timeout:8000,
 													        data: $formData,
 													        success: handleFormSuccess,
 													        error: handleFormError,
@@ -440,16 +420,12 @@ El mago de Oz (1939)</h1>
 													})
 
 													function handleFormSuccess(data, textStatus, jqXHR){
-													    console.log(data)
-													    console.log(textStatus)
-													    console.log(jqXHR)
+													   
 													    $myForm[0].reset(); 
 													}
 
 													function handleFormError(jqXHR, textStatus, errorThrown){
-													    console.log(jqXHR)
-													    console.log(textStatus)
-													    console.log(errorThrown)
+													    
 													}
 														
 													    document.getElementById(juana).style.display = "none";
